adding newer version of brython

--- a/minimal_test_brython.html
+++ b/minimal_test_brython.html
@@ -5,8 +5,8 @@
 
 <!-- Edit to select which version is desired 3.3.4 or 3.5  -->
 
-<script type="text/javascript" src="/brython3.5/brython.js"></script>
-<script type="text/javascript" src="/brython3.5/brython_stdlib.js"></script>
+<script type="text/javascript" src="/brython3.6.2/brython.js"></script>
+<script type="text/javascript" src="/brython3.6.2/brython_stdlib.js"></script>
 
 <script>
     Namespace = {};
@@ -110,7 +110,7 @@
 
 <p>
     Attempting to create an <b>absolute</b> minimal working example that reproduces
-    the type of error seen in Reeborg when using Brython 3.5.0rc1 and
+    the type of error seen in Reeborg when using Brython greater than 3.5 and
     which was not present when using Brython 3.3.4.
 
     Edit the html file to select the desired version to run the tests.
